--- a/src/pages/experience/experience.scss
+++ b/src/pages/experience/experience.scss
@@ -1,5 +1,4 @@
 .Experience {
-  width: 90%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -9,6 +8,7 @@
     padding: 2rem 0;
   }
   .head {
+    margin-left: 2rem;
     font-size: 2.5rem;
     color: #ffffff;
     span {
@@ -63,10 +63,9 @@
   }
 
   .marker {
-    width: 16px;
-    height: 16px;
-    // border-radius: 50%;
-    rotate: 45deg;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
     border: 2px solid #fff;
     background: #4fc1e9;
     margin-top: 10px;
@@ -75,11 +74,27 @@
 
   .timeline-content {
     // border: 1px solid white;
-    margin: -1rem 1rem;
+    margin: 0rem 1rem;
     width: 95%;
     padding: 1rem 1.5rem;
     color: #ffffff;
     cursor: pointer;
+  }
+  .details {
+    display: flex;
+  }
+  .time {
+    color: #ddd;
+    font-size: 16px;
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+  }
+
+  .watch {
+    color: white;
+    padding: 0rem 1rem;
+    font-size: 1.5rem;
   }
 
   .btn {
@@ -98,9 +113,9 @@
     font-weight: 500;
   }
 
-  .timeline-content span {
-    font-size: 15px;
-    color: #f0f0f0;
+  .timeline-content .span {
+    font-size: 16px;
+    color: #41ffef;
   }
 
   .timeline-content p {
@@ -125,6 +140,9 @@
     .timeline-block-left {
       float: none;
       direction: ltr;
+    }
+    .details {
+      flex-direction: column;
     }
   }
 }
