--- a/src/pages/skills/skills.scss
+++ b/src/pages/skills/skills.scss
@@ -1,7 +1,80 @@
 .Skills {
+  z-index: 5;
+  .head {
+    margin-left: 2rem;
+    font-size: 2.5rem;
+    color: #ffffff;
+    span {
+      color: #00aeff;
+    }
+    .hr {
+      width: 10%;
+    }
+  }
+  .head2 {
+    font-size: 2rem;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    color: #41ffef;
+  }
+  .StackCard {
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    width: 90%;
-    height: 90vh;
+    flex-wrap: wrap;
+    .card {
+      z-index: 5;
+      background: #001120;
+      width: 30rem;
+      height: 10rem;
+      border: 1px solid #222;
+      border-radius: 10px;
+      margin: 1rem;
+      padding: 1rem;
+      display: flex;
+      cursor: pointer;
+      transition: 0.5s;
+      position: relative; /* Add position relative for shadow effect */
+      &:hover {
+        transition: 0.5s;
+        border: 1px solid white;
+        box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.5); /* Add shadow effect on hover */
+        backdrop-filter: blur(10px); /* Add blur effect on hover */
+      }
+      .head {
+        font-family: "Times New Roman", Times, serif;
+        width: 1rem;
+        height: auto;
+        rotate: 270deg;
+        font-size: 1.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .icon {
+        font-size: 5rem;
+        flex: 0.5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .img {
+          width: 5rem;
+          height: auto;
+        }
+      }
+      .content {
+        font-family: monospace;
+        flex: 1;
+        padding-left: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+    @media screen and (max-width: 600) {
+      .card {
+        width: 90%;
+      }
+    }
+  }
 }
