--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,7 +4,6 @@
     width: 100%;
     background-color: #141e22;
     border-bottom: 1px solid #d3d3d3;
-    // position: fixed;
     .nav-header {
       cursor: pointer;
       display: inline;
@@ -37,9 +36,6 @@
           color: #41ffef;
           transition: 0.3s;
         }
-        &:active {
-          color: #00aeff;
-        }
       }
     }
     #nav-check {
@@ -66,12 +62,6 @@
           &:hover {
             background-color: rgba(0, 0, 0, 0.3);
           }
-        //   span {
-        //     display: block;
-        //     width: 25px;
-        //     height: 10px;
-        //     border-top: 2px solid #eee;
-        //   }
         }
       }
       .nav-links {
@@ -93,7 +83,7 @@
         height: 0px;
       }
       #nav-check:checked ~ .nav-links {
-        height: calc(45vh - 50px);
+        height: calc(25rem - 50px);
         overflow-y: auto;
       }
     }
