--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Roboto&family=Poppins&display=swap');
 
 body {
-    background: #141E22;
+    background: #111111;
     color: white;
     font-family: "Black Ops One";
     margin: 0;
