--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,7 +2,7 @@
   .nav {
     height: auto;
     width: 100%;
-    background-color: #141e22;
+    background-color: #04040400;
     border-bottom: 1px solid #d3d3d3;
     .nav-header {
       cursor: pointer;
