--- a/src/pages/skills/skills.scss
+++ b/src/pages/skills/skills.scss
@@ -84,10 +84,18 @@
   }
   @media screen and (max-width: 600px) {
     .StackCard {
-      display: none;
+      //   display: none;
+
+      .card {
+        height: auto;
+        .content {
+          font-size: 0.8rem;
+          display: none;
+        }
+      }
     }
     .head2 {
-      display: none;
+      font-size: 1.5rem;
     }
   }
 }
