--- a/src/pages/hero/hero.scss
+++ b/src/pages/hero/hero.scss
@@ -45,10 +45,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: auto;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     .hero-left {
-      margin-top: 4rem;
-      margin-bottom: 4rem;
+      margin-top: 20rem;
       flex: none;
     }
     .hero-right {
