--- a/src/components/preloader/preloader.scss
+++ b/src/components/preloader/preloader.scss
@@ -16,6 +16,7 @@
       border-radius: 10px 10px 0 0;
       animation: moveRocketH 19s linear infinite;
       animation-iteration-count: 1;
+      color: #00aeff;
     }
     .hr {
       width: 1rem;
