--- a/src/components/preloader/preloader.scss
+++ b/src/components/preloader/preloader.scss
@@ -101,6 +101,7 @@
   @media (max-width: 800px) {
     .Preloader {
       font-size: 25px;
+      height: 75vh;
     }
     .skipdiv {
       .skipbtn {
