--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -86,6 +86,7 @@
         height: calc(25rem - 50px);
         overflow-y: auto;
         z-index: 1000;
+        background-color: #000000dd;
       }
     }
   }
