--- a/src/components/preloader/preloader.scss
+++ b/src/components/preloader/preloader.scss
@@ -5,8 +5,136 @@
     height: 90vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    .mountains {
+      position: absolute;
+      z-index: 10;
+      left: 0;
+      bottom: 30%;
+      width: 100%;
+      height: 50%;
+      svg {
+        bottom: 0;
+        position: absolute;
+      }
+    }
+    .moon {
+      z-index: -1;
+      width: 30vw;
+      height: 30vw;
+      position: absolute;
+      left: 50%;
+      bottom: 35%;
+      transform: translate(-50%, 0);
+      border-radius: 100%;
+      overflow: hidden;
+      box-shadow: 0 -20px 40px -20px #f46585;
+      &:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 40%;
+        background: linear-gradient(0deg, rgb(254, 189, 95) 0%, #fede5c 100%);
+      }
+      .line {
+        top: 0;
+        width: 100%;
+        height: 35%;
+        position: absolute;
+        animation: moonLinesSlide 6s ease-in infinite both;
+        @for $i from 1 through 10 {
+          &:nth-child(#{$i}) {
+            animation-delay: 0.6s * $i;
+          }
+        }
+      }
+    }
+    .plane {
+    z-index: 20;
+    height: 30%;
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    background: rgb(24, 7, 39);
+    overflow: hidden;
+    border-top: 2px solid #fe50b1;
+    box-shadow: 0 0 150px -60px #fe50b1;
+    background: linear-gradient(0deg, rgb(24, 7, 39) 60%, #4e0646 100%);
+    .vlines {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      .line {
+        box-shadow: 0 0 5px #ff91cf;
+      }
+      .left {
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        border-right: 1px solid #fe50b1;
+        .line {
+          right: 0%;
+          width: 2px;
+          height: 100%;
+          position: absolute;
+          background: #fe50b1;
+          @for $i from 1 through 5 {
+            &:nth-child(#{$i}) {
+              right: 12% * $i;
+              transform-origin: 100% 0%;
+              transform: skewX(-35deg - 10deg * $i);
+            }
+          }
+        }
+      }
+      .right {
+        width: 50%;
+        height: 100%;
+        right: 0;
+        position: absolute;
+        border-left: 1px solid #fe50b1;
+        .line {
+          right: 0%;
+          width: 2px;
+          height: 100%;
+          position: absolute;
+          background: #fe50b1;
+          @for $i from 1 through 5 {
+            &:nth-child(#{$i}) {
+              left: 12% * $i;
+              transform-origin: 100% 0%;
+              transform: skewX(35deg + 10deg * $i);
+            }
+          }
+        }
+      }
+    }
+    .lines {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      .line {
+        width: 100%;
+        height: 2px;
+        position: absolute;
+        bottom: 90%;
+        background: #fe50b1;
+        animation: linesSlide 3s ease-in infinite both;
+        box-shadow: 0 0 5px #ff91cf;
+        @for $i from 1 through 10 {
+          &:nth-child(#{$i}) {
+            animation-delay: 0.3s * $i;
+          }
+        }
+      }
+    }
+  }
     .rocket {
       display: flex;
       position: absolute;
@@ -23,7 +151,7 @@
       animation: tail 19s linear infinite;
       animation-iteration-count: 1;
     }
-  
+
     @keyframes moveRocketH {
       0% {
         transform: translateX(-50vw) translateY(-90vh);
@@ -67,6 +195,8 @@
     }
   }
   .skipdiv {
+    position: relative;
+    z-index: 1000;
     display: flex;
     justify-content: end;
     width: 95%;
@@ -101,7 +231,7 @@
   @media (max-width: 800px) {
     .Preloader {
       font-size: 25px;
-      height: 90vh;
+      height: 80vh;
     }
     .skipdiv {
       .skipbtn {
