--- a/src/pages/projects/project.scss
+++ b/src/pages/projects/project.scss
@@ -1,30 +1,17 @@
 .Project {
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   width: 90%;
-  //   height: 90vh;
-  body {
-    margin: 0;
-    overflow: hidden;
-    background-color: black;
+  width: 90%;
+  height: 90vh;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    display: none;
   }
-  .shooting-star {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 20px solid white;
-  animation: moveShootingStar linear infinite;
-}
-
-@keyframes moveShootingStar {
-  from {
-    transform: translateX(-100%);
+  .head {
+    text-align: start;
+    margin: 1rem 2rem;
+    font-size: 2.5rem;
+    color: #ffffff;
+    .hr {
+      width: 7%;
+    }
   }
-  to {
-    transform: translateX(100vw);
-  }
-}
 }
