--- a/src/pages/skills/skills.scss
+++ b/src/pages/skills/skills.scss
@@ -45,6 +45,8 @@
         border: 1px solid white;
         box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.5); /* Add shadow effect on hover */
         backdrop-filter: blur(10px); /* Add blur effect on hover */
+        scale: 0.9;
+        // transform: matrix(0,1,1,0,0,0);
       }
       .head {
         width: 1rem;
